# promptinject-env-agents

./: .env.example  .gitignore  Blog.md  Dockerfile  PITCH.md  README.md  inference.py  openenv.yaml  p2.md  pyproject.toml  requirements.txt  run_lightning_a100.ipynb  run_lightning_output.ipynb
arena/: __init__.py  attacker.py  coordinator.py  defender.py  env.py  grpo.py  multi_attacker.py  multi_env.py  run.py  run_multi.py  test_arena.py  test_multi.py  viz.py
dataset/: dataset_stats.json  finetune_adversarial.py  finetune_shieldgemma_colab.py  pull_hf_datasets.py  raw_injections.json  shieldgemma_finetune.ipynb  test.jsonl  test_generalization.py  test_overfit.py  train.jsonl  train_gemma3_1b.py  train_gemma3_4b.py  train_gemma4.py  train_lightning.py  val.jsonl
evals/: baseline_results.md
misc/: PLAN.md  gemma3_4b_detector.py  gemma4_detector.py  idea.txt  p2.md  shieldgemma_detector.py  validate-submission.sh
misc/dataset/: SOURCES.md  add_more_examples.py  build_dataset.py  dataset_stats.json  finetune_adversarial.py  raw_injections.json  shieldgemma_finetune.ipynb  train.jsonl  train_gemma4.py
scripts/: finetune.py  start.sh
server/: app.py  attacker.py  env.py  gemma3_1b_detector.py  gemma3_4b_detector.py  main.py  models.py  pipeline_env.py  shieldgemma_detector.py
server/data/: dynamic_attacks.json  easy.json  hard.json  indirect.json  medium.json  pipeline.json
server/static/: index.html
tests/: test_evolve_endpoint.py  test_graders.py  test_pipeline_reward.py
